fixed media spacing

--- a/public/AboutPageAssets/styles/aboutPageStyle.css
+++ b/public/AboutPageAssets/styles/aboutPageStyle.css
@@ -270,7 +270,6 @@ body header {
 .cVoReelPicsHeader {
 	width: 55vw;
 	float: right;
-	height: 3vw;
 }
 .cVoReelPicsHeader .cVOSec {
 	font-family: "Kingthings Exeter";
